// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInvitationSSOPage /> <TestUserInvitationSSOPage /> should render facebook sso button 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-GKYOR Flex___StyledAppBox-SiGEY bBJlKt UserInvitationSSOPagestyle__Container-dqXVfv fkvEqx"
  >
    <div
      className="sc-GKYOR Flex___StyledAppBox-SiGEY bCbOmC UserInvitationSSOPagestyle__LeftSide-hwYfPk kGvogW"
    >
      <div
        className="sc-GKYOR Flex___StyledAppBox-SiGEY xlKWh UserInvitationSSOPagestyle__LeftSideInner-jeevrm ldiJwX"
      >
        <div
          className="sc-GKYOR UserInvitationSSOPagestyle__WelcomeMessage-hrwgdJ jUnlzR dPMeBO"
        >
          <h2
            className="sc-bcXGCL hOPycA cap-heading"
          >
            global-welcome
             
            <span
              aria-label="global-welcome"
              role="img"
            >
              👋
            </span>
          </h2>
          <p
            className="sc-bcXGCL hxrlMk cap-text"
          >
            invite-join-platform
          </p>
        </div>
        <div
          className="sc-GKYOR Flex___StyledAppBox-SiGEY dxXYJ UserInvitationSSOPagestyle__ButtonsContainer-ejOutq bnfHaO"
        >
          <div
            className="SSOButtonstyle__LinkButton-imVlRX dgSBwV"
            type="facebook"
          >
            <IconMock
              aria-hidden={true}
              className="loginIcon"
              focusable={false}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
            />
            <a
              href="/login/facebook?_destination=http://localhost"
              rel="noreferrer"
              target="_blank"
              title="facebook"
            >
              <span>
                Facebook
              </span>
            </a>
          </div>
          <div
            className="sc-bcXGCL eytkwe"
          >
            <div
              className="sc-GKYOR UserInvitationSSOPagestyle__Line-eEMwHm kkiDIN hPTlau"
            />
            <p
              className="sc-bcXGCL iuhcLt cap-text"
            >
              global-or
            </p>
            <div
              className="sc-GKYOR UserInvitationSSOPagestyle__Line-eEMwHm kkiDIN hPTlau"
            />
          </div>
          <a
            backgroundColor="green"
            className="SSOButtonstyle__BaseButton-dgxwMq SSOButtonstyle__PrimarySSOButton-fiGXjA gaZgJr hMpXwe"
            href="/?token=onishan"
            onClick={[Function]}
            textColor="white"
          >
            create-account-with-email
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-GKYOR Flex___StyledAppBox-SiGEY TCvTX UserInvitationSSOPagestyle__RigthSide-icDiDX bLaseu"
    >
      <div
        className="UserInvitationPagestyle__Symbols-eemyjG kKYEMo"
      />
      <img
        alt=""
        className="UserInvitationSSOPagestyle__Logo-irXgkD eRFVhU"
        src="/logo"
      />
    </div>
  </div>,
]
`;

exports[`<UserInvitationSSOPage /> <TestUserInvitationSSOPage /> should render franceConnect sso button 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-GKYOR Flex___StyledAppBox-SiGEY bBJlKt UserInvitationSSOPagestyle__Container-dqXVfv fkvEqx"
  >
    <div
      className="sc-GKYOR Flex___StyledAppBox-SiGEY bCbOmC UserInvitationSSOPagestyle__LeftSide-hwYfPk kGvogW"
    >
      <div
        className="sc-GKYOR Flex___StyledAppBox-SiGEY xlKWh UserInvitationSSOPagestyle__LeftSideInner-jeevrm ldiJwX"
      >
        <div
          className="sc-GKYOR UserInvitationSSOPagestyle__WelcomeMessage-hrwgdJ jUnlzR dPMeBO"
        >
          <h2
            className="sc-bcXGCL hOPycA cap-heading"
          >
            global-welcome
             
            <span
              aria-label="global-welcome"
              role="img"
            >
              👋
            </span>
          </h2>
          <p
            className="sc-bcXGCL hxrlMk cap-text"
          >
            invite-join-platform
          </p>
        </div>
        <div
          className="sc-GKYOR Flex___StyledAppBox-SiGEY dxXYJ UserInvitationSSOPagestyle__ButtonsContainer-ejOutq bnfHaO"
        >
          <div
            className="SSOButtonstyle__FranceConnectButton-iIoYOE gkPYMZ"
          >
            <a
              className="sc-GKYOR Link__LinkInner-jUMeyB bEowgP jQFfTS"
              href="/login/franceconnect?_destination=http://localhost"
              target="_blank"
            >
              <IconMock
                aria-hidden={true}
                className="loginIcon"
                focusable={false}
                style={
                  Object {
                    "flexShrink": "0",
                    "verticalAlign": "middle",
                  }
                }
              />
            </a>
          </div>
          <div
            className="sc-bcXGCL eytkwe"
          >
            <div
              className="sc-GKYOR UserInvitationSSOPagestyle__Line-eEMwHm kkiDIN hPTlau"
            />
            <p
              className="sc-bcXGCL iuhcLt cap-text"
            >
              global-or
            </p>
            <div
              className="sc-GKYOR UserInvitationSSOPagestyle__Line-eEMwHm kkiDIN hPTlau"
            />
          </div>
          <a
            backgroundColor="green"
            className="SSOButtonstyle__BaseButton-dgxwMq SSOButtonstyle__PrimarySSOButton-fiGXjA gaZgJr hMpXwe"
            href="/?token=onishan"
            onClick={[Function]}
            textColor="white"
          >
            create-account-with-email
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-GKYOR Flex___StyledAppBox-SiGEY TCvTX UserInvitationSSOPagestyle__RigthSide-icDiDX bLaseu"
    >
      <div
        className="UserInvitationPagestyle__Symbols-eemyjG kKYEMo"
      />
      <img
        alt=""
        className="UserInvitationSSOPagestyle__Logo-irXgkD eRFVhU"
        src="/logo"
      />
    </div>
  </div>,
]
`;
